[+] fixed the overflow of the body elements

--- a/style/main.css
+++ b/style/main.css
@@ -11,14 +11,22 @@
 *::selection {
 	background: #ffca4d;
 }
+body {
+	overflow-x: hidden;
+}
 
 img {
 	pointer-events: none;
+	user-select: none;
+}
+button {
+	user-select: none;
 }
 
 a {
 	text-decoration: none;
 	color: black;
+	user-select: none;
 }
 .main-container {
 	background-color: white;
@@ -205,9 +213,13 @@ nav ul li:hover {
 }
 
 .illustration {
+	display: flex;
 	margin-left: 5vw;
 	width: 25vw;
 	margin-bottom: -0.7vw;
+}
+.illustration img {
+	margin: 0;
 }
 
 /* Project section */
@@ -236,7 +248,7 @@ nav ul li:hover {
 }
 
 .project img {
-	width: 30vw;
+	width: 27vw;
 
 	/* box-shadow: 0.4vw 0.4vw 0.4vw rgba(0, 0, 0, 0.1); */
 }
